--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,8 @@ services:
     plan: free
     branch: main
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn run:app
+    startCommand: gunicorn run:app --workers 1 --timeout 120 --preload
+    preDeployCommand: flask db upgrade
     envVars:
       - key: PYTHON_VERSION
         value: 3.12.0
