--- a/render.yaml
+++ b/render.yaml
@@ -6,7 +6,7 @@ services:
     plan: free
     branch: main
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn run:app --workers 1 --timeout 120 --preload
+    startCommand: gunicorn run:app --workers 1 --timeout 300 --preload --max-requests 1000 --max-requests-jitter 50
     preDeployCommand: flask db upgrade
     envVars:
       - key: PYTHON_VERSION
